--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,16 @@
             <artifactId>modelmapper</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.google-collections</groupId>
+            <artifactId>google-collect</artifactId>
+            <version>snapshot-20080530</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
         <!--Shiro EhCache End -->
     </dependencies>
 
