--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,11 @@
             <artifactId>dubbo</artifactId>
             <version>${dubbo.version}</version>
         </dependency>
+     <!--   <dependency>
+            <groupId>com.alibaba.spring.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+        </dependency>-->
         <!-- dubbo end -->
 
     </dependencies>
